# r2b-sprint3

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: f8f439d869bb_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  dashboard.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  base.py  classrooms.py  enums.py  notifications.py  preferences.py  schedules.py  students.py  subjects.py  teachers.py  users.py
backend/app/repositories/: __init__.py  base.py  users.py
backend/app/schemas/: __init__.py  auth.py  base.py  dashboard.py  schedule.py  users.py
backend/app/services/: __init__.py  auth.py  dashboard.py  export_service.py  llm_service.py  schedule.py
backend/app/services/solver/: constraints.py  models.py  schedule_solver.py
backend/scripts/: export_openapi.py  seed_roles.py  seed_subjects.py  seed_test_user.py
backend/tests/: conftest.py
backend/tests/unit/services/: test_export_service.py  test_llm_service.py
docs/requirements/: DESIGN-PROCESS-GUIDE.md  STEERING.md  api-specification.md  data-model.md  functional-requirements.md  non-functional-requirements.md
frontend/: next.config.mjs  orval.config.ts  package-lock.json  package.json
frontend/src/lib/: utils.ts
infrastructure/: README.md
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
wireframe/: index.html
(+99 files in other folders)
